--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 body {
+  font-family: "Poppins", sans-serif;
   position: fixed;
   margin: 0px;
   padding: 0px;
@@ -10,6 +11,12 @@ body {
 }
 .container header h1 {
   font-size: 3.5rem;
+  margin-block-end: 0.2em;
+  margin-block-start: 0.2em;
+}
+.container header h2 {
+  margin-block-end: 0.2em;
+  margin-block-start: 0.9em;
 }
 .container .canvas {
   display: inline-block;
@@ -62,6 +69,17 @@ body {
   width: 86px;
   top: -57px;
   left: 418px;
+}
+.container .canvas button {
+  height: 40px;
+  width: 100%;
+  color: white;
+  background-color: black;
+  border-style: none;
+  margin: 10px 0px;
+  font: 400 1.4rem Poppins;
+  padding: 0px;
+  border-width: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
