--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Poppins', sans-serif;
     position: fixed;
     margin: 0px;
     padding: 0px;
@@ -11,6 +12,12 @@ body {
     header {
         h1 {
             font-size: 3.5rem;
+            margin-block-end: .2em;
+            margin-block-start: .2em;
+        }
+        h2 {
+            margin-block-end: .2em;
+            margin-block-start: .9em;
         }
     }
 
@@ -72,6 +79,18 @@ body {
                 top: -57px;
                 left: 418px;
             }
+        }
+
+        button {
+            height: 40px;
+            width: 100%;
+            color: white;
+            background-color: black;
+            border-style: none;
+            margin: 10px 0px;
+            font: 400 1.4rem Poppins;
+            padding: 0px;
+            border-width: 0;
         }
     }
 }
