--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,20 @@
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(3, 3, 1, 0.4);
+    box-shadow: 0 0 0 0 rgba(3, 3, 1, 0.4);
+  }
+  70% {
+    -moz-box-shadow: 0 0 0 20px rgba(32, 32, 32, 0);
+    box-shadow: 0 0 0 20px rgba(15, 15, 15, 0);
+  }
+  100% {
+    -moz-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+}
 body {
   font-family: "Poppins", sans-serif;
+  position: fixed;
   margin: 0px;
   padding: 0px;
   width: 100%;
@@ -10,66 +25,67 @@ body {
 }
 .container header h1 {
   font-size: 3.5rem;
-  margin-block-end: 0.2em;
-  margin-block-start: 0.2em;
+  margin-block-end: 0;
+  margin-block-start: 0;
 }
 .container header h2 {
-  margin-block-end: 0.2em;
-  margin-block-start: 0.2em;
+  margin-block-end: 0;
+  margin-block-start: 0;
+  height: 120px;
 }
-.container .canvas {
+.container .gameBoard {
   display: inline-block;
+  position: relative;
 }
-.container .canvas .dots {
+.container .gameBoard div {
+  text-align: initial;
+}
+.container .gameBoard div .dots {
   padding-inline-start: 0px;
   display: flex;
   justify-content: space-between;
 }
-.container .canvas .dots li {
+.container .gameBoard div .dots li {
   display: inline-block;
   list-style: none;
   height: 86px;
   width: 86px;
 }
-.container .canvas .landing-zone {
+.container .gameBoard div .dots li img {
+  position: absolute;
+  z-index: 2;
+}
+.container .gameBoard .landing-zone {
   background-image: url("../../assets/ia-logo-back.png");
   width: 600px;
   height: 600px;
 }
-.container .canvas .landing-zone div {
-  position: relative;
-}
-.container .canvas .landing-zone #black1Landing {
+.container .gameBoard .landing-zone div {
   height: 86px;
   width: 86px;
-  top: 191px;
+  position: absolute;
+}
+.container .gameBoard .landing-zone #black1Landing {
+  top: 309px;
   left: 47px;
 }
-.container .canvas .landing-zone #greenLanding {
-  height: 86px;
-  width: 86px;
-  top: 248px;
+.container .gameBoard .landing-zone #greenLanding {
+  top: 453px;
   left: 143px;
 }
-.container .canvas .landing-zone #blueLanding {
-  height: 86px;
-  width: 86px;
-  top: -125px;
-  left: 274px;
+.container .gameBoard .landing-zone #blueLanding {
+  top: 165px;
+  left: 275px;
 }
-.container .canvas .landing-zone #redLanding {
-  height: 86px;
-  width: 86px;
-  top: -188px;
-  left: 455px;
+.container .gameBoard .landing-zone #redLanding {
+  top: 188px;
+  left: 454px;
 }
-.container .canvas .landing-zone #black2Landing {
-  height: 86px;
-  width: 86px;
-  top: -57px;
-  left: 418px;
+.container .gameBoard .landing-zone #black2Landing {
+  top: 405px;
+  left: 420px;
 }
-.container .canvas button {
+.container .gameBoard button {
   height: 40px;
   width: 100%;
   color: white;
@@ -81,13 +97,25 @@ body {
   border-width: 0;
 }
 
+.ping {
+  animation: pulse 3s linear;
+  border-radius: 50px;
+}
+
+#particle-canvas {
+  display: block;
+  position: fixed;
+  pointer-events: none;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
+
 @media only screen and (max-width: 950px) {
   .container {
     margin: 0 10px;
-  }
-  .container .canvas .dots {
-    margin-block-start: 5px;
-    margin-block-end: 10px;
   }
 }
 @media only screen and (max-width: 710px) {
@@ -107,42 +135,46 @@ body {
     margin-block-end: 0.2rem;
     height: 140px;
   }
-  .container .canvas .dots img {
+  .container .gameBoard div .dots li {
     width: 60px;
     height: 60px;
   }
-  .container .canvas .landing-zone {
+  .container .gameBoard div .dots li img {
+    width: 60px;
+    height: 60px;
+  }
+  .container .gameBoard .landing-zone {
     background-size: contain;
     width: 430px;
     height: 430px;
     background-repeat: no-repeat;
   }
-  .container .canvas .landing-zone img {
+  .container .gameBoard .landing-zone img {
     width: 60px;
     height: 60px;
   }
-  .container .canvas .landing-zone #black1Landing, .container .canvas .landing-zone #greenLanding, .container .canvas .landing-zone #redLanding, .container .canvas .landing-zone #blueLanding, .container .canvas .landing-zone #black2Landing {
+  .container .gameBoard .landing-zone #black1Landing, .container .gameBoard .landing-zone #greenLanding, .container .gameBoard .landing-zone #redLanding, .container .gameBoard .landing-zone #blueLanding, .container .gameBoard .landing-zone #black2Landing {
     width: 60px;
     height: 60px;
   }
-  .container .canvas .landing-zone #black1Landing {
-    top: 137px;
+  .container .gameBoard .landing-zone #black1Landing {
+    top: 229px;
     left: 34px;
   }
-  .container .canvas .landing-zone #black2Landing {
-    top: -34px;
+  .container .gameBoard .landing-zone #black2Landing {
+    top: 298px;
     left: 301px;
   }
-  .container .canvas .landing-zone #blueLanding {
-    top: -87px;
+  .container .gameBoard .landing-zone #blueLanding {
+    top: 126px;
     left: 198px;
   }
-  .container .canvas .landing-zone #greenLanding {
-    top: 180px;
-    left: 102px;
+  .container .gameBoard .landing-zone #greenLanding {
+    top: 333px;
+    left: 103px;
   }
-  .container .canvas .landing-zone #redLanding {
-    top: -129px;
+  .container .gameBoard .landing-zone #redLanding {
+    top: 143px;
     left: 327px;
   }
 }
