--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,7 +34,7 @@ body {
         h2 {
             margin-block-end: 0;
             margin-block-start: 0;
-            height: 120px; 
+            //height: 120px; 
         }
     }
 
@@ -116,7 +116,7 @@ body {
 
 //dot landing ping styling
 .ping {
-    animation: pulse 3s linear;
+    animation: pulse 2s linear;
     border-radius: 50px;
 }
  
