--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,7 @@ body {
     text-align: center;
 
     header {
+        height: 200px;
         h1 {
             font-size: 3.5rem;
             margin-block-end: 0;
@@ -33,8 +34,7 @@ body {
         }
         h2 {
             margin-block-end: 0;
-            margin-block-start: 0;
-            //height: 120px; 
+            margin-block-start: 0; 
         }
     }
 
