--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 950px) {
     .container {
         margin: 0 10px;
-        header {
+        header { 
             h1 {
                 font-size: 2.8rem;
             }
@@ -14,6 +14,9 @@
 
 @media only screen and (max-width: 650px) {
     .container {
+        header {
+            height: 300px;
+        }
         .gameBoard {
             div {   
                 .dots {
