--- a/scss/main.scss
+++ b/scss/main.scss
@@ -47,6 +47,7 @@ body {
                 padding-inline-start: 0px;
                 display: flex;
                 justify-content: space-between;
+                padding-left: 0px;
     
                 li {
                     display: inline-block;
