--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -15,7 +15,7 @@
 @media only screen and (max-width: 650px) {
     .container {
         header {
-            height: 300px;
+            height: 310px;
         }
         .gameBoard {
             div {   
@@ -73,6 +73,14 @@
                     left: 327px;
                 }
             }
+        }
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .container {
+        header {
+        height: 120px;
         }
     }
 }
