Cleaned up comments; Added many comments; fixed landing zone draggable

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -115,14 +115,14 @@ body {
     }
 }
 
-//dot landing ping styling
+// Dot landing pulse styling
 .ping {
     animation: pulse 2s linear;
     border-radius: 50px;
 }
  
 
-// confetti styling
+// Confetti styling
 #particle-canvas {
     display: block; 
     position: fixed;
